<resources>
    <string name="app_name">煎蛋</string>

    <string name="set_toolbar_title">设置</string>

    <!--Preference Title Summary-->
    <string name="set_screen_title">设置</string>
    <string name="set_category_basic_title">基本设置</string>
    <string name="set_category_other_title">其它</string>
    <string name="set_preference_meizi_title">妹子图</string>
    <string name="set_preference_unwelcome_content_title">隐藏不受欢迎内容</string>
    <string name="set_preference_unwelcome_content_summary">隐藏无聊图、妹子图和段子板块中不受欢迎的内容</string>
    <string name="set_preference_gifautoplay_title">动画自动播放设置</string>
    <string name="set_preference_usechrome_title">使用Chrome打开链接</string>
    <string name="set_preference_account_title">游客账号</string>
    <string name="set_preference_account_summary">内容的评论和发布账号</string>
    <string name="set_preference_about_title">关于煎蛋</string>
    <string name="set_preference_version_title">版本信息</string>

    <!--Preference Key-->
    <string name="key_preference_meizi">key_preference_meizi</string>
    <string name="key_preference_unwelcome">key_preference_unwelcome</string>
    <string name="key_preference_gifautoplay">key_preference_gifautoplay</string>
    <string name="key_preference_usechrome">key_preference_usechrome</string>
    <string name="key_preference_account">key_preference_account</string>
    <string name="key_preference_about">key_preference_about</string>
    <string name="key_preference_version">key_preference_version</string>


</resources>
